Fix bug in dark mode

--- a/src/sass/banner.scss
+++ b/src/sass/banner.scss
@@ -19,10 +19,6 @@
   .glowy-ghost {
     opacity: .25 !important;
   }
-
-  .text-holder.text-black .text-lines {
-    background: $gray-800 !important;
-  }
 }
 
 .banner-canvas {
